# CodexSwitcher

./: .gitignore  AGENTS.md  README.md  build.ps1  codex_switcher.py  pyproject.toml  pyside_switcher.py
