[project]
name = "codex-switcher"
version = "0.1.0"
description = "Codex Switcher desktop utility."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pillow==12.2.0",
    "pyside6==6.11.0",
    "pyyaml==6.0.3",
    "qt-material==2.17",
    "requests==2.33.1",
]

[dependency-groups]
build = [
    "pyinstaller",
]

[tool.uv]
package = false
